kubernetes/dockercoins.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
  - port: 6379
  selector:
    app: redis
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rng
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rng
    spec:
      containers:
      - name: rng
        image: localhost:5000/dockercoins_rng
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rng
  labels:
    app: rng
spec:
  ports:
  - port: 80
  selector:
    app: rng
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webui
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webui
    spec:
      containers:
      - name: webui
        image: localhost:5000/dockercoins_webui
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webui
  labels:
    app: webui
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 80
  selector:
    app: webui
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: localhost:5000/dockercoins_worker
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hasher
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hasher
    spec:
      containers:
      - name: hasher
        image: localhost:5000/dockercoins_hasher
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hasher
  labels:
    app: hasher
spec:
  ports:
  - port: 80
  selector:
    app: hasher
